2020-01-14  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/24656: Doc/Zsh/mod_zutil.yo: docs: Add an example of
	setting and querying zstyles

2020-01-14  Peter Stephenson  <p.stephenson@samsung.com>

	* users/24659: Doc/Zsh/compsys.yo: Cross-reference use of
	matcher and matcher-list with tag-order.

2020-01-13  dana  <dana@dana.is>

	* 45296: Test/D02glob.ztst: Clean up after test from users/24633

2020-01-13  Daniel Shahaf  <danielsh@apache.org>

	* 45290: Test/list-XFails: New helper script for listing
	XFail tests.

2020-01-12  Daniel Shahaf  <danielsh@apache.org>

	* users/24633: Test/D02glob.ztst: Add an xfail test for
	users/24619.

2020-01-11  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* unposted: Completion/Unix/Command/_cat: additional typo fix

	* Eitan: 45280: Completion/Unix/Command/_git: add -local
	variants to completed date formats

2020-01-11  Peter Stephenson  <p.stephenson@samsung.com>

	* users/24628 (fixed up): Doc/Zsh/contrib.yo: Add example of how
	to bind word matching widget with a fixed style.

2020-01-10  Daniel Shahaf  <danielsh@apache.org>

	* 45266: Completion/Linux/Command/_losetup: Fix losetup
	completion, broken in da085b7a20729401c725f91ae930200d0deda64f
	(41720).

	* unposted: Doc/Zsh/mod_zpty.yo: Fix punctuation.

2020-01-10  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 45264: configure.ac: use /dev/fd on Cygwin for process
	substitution

2020-01-09  Daniel Shahaf  <danielsh@apache.org>

	* unposted: Completion/Debian/Command/_sbuild,
	Completion/Unix/Command/_growisofs: Two additional typo fixes.

2020-01-09  Jens Schleusener  <Jens.Schleusener@fossies.org>

	* 45269: Completion/BSD/Command/_mixerctl,
	Completion/Darwin/Command/_fs_usage,
	Completion/Darwin/Type/_mac_files_for_application,
	Completion/Debian/Command/_sbuild,
	Completion/Linux/Command/_brctl,
	Completion/Linux/Command/_findmnt,
	Completion/Linux/Command/_ltrace,
	Completion/Mandriva/Command/_urpmi,
	Completion/Redhat/Command/_yum,