@@ -1,3 +1,8 @@
+2020-01-15  Daniel Shahaf  <danielsh@apache.org>
+
+	* 45302: Src/builtin.c: bin_umask(): Queue signals around
+	umask().
+
 2020-01-14  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* users/24656: Doc/Zsh/mod_zutil.yo: docs: Add an example of
